# Explosion

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml  publish-conan-recipes.yml
CMake/: Common.cmake  Config.cmake.in  Target.cmake
Editor/: CMakeLists.txt
Editor/Qml/: EFloatInput.qml  EIntegerInput.qml  ETextField.qml  ETheme.qml  EWidgetSamples.qml
Editor/Shader/: ImGui.esl
Editor/Src/: EditorApplication.cpp  EditorClient.cpp  EditorContext.cpp  EditorLog.cpp  EditorWindow.cpp  Main.cpp  SceneClient.cpp  SystemGraphPresets.cpp
Editor/Test/: AssetFileSystemTest.cpp
Engine/Shader/: BasePassPS.esl  BasePassVS.esl
Engine/Source/Common/: CMakeLists.txt
Engine/Source/Common/Benchmark/Math/: CMakeLists.txt  MathBenchmark.cpp
Engine/Source/Common/Include/Common/: Serialization.h  String.h  Utility.h
Engine/Source/Common/Include/Common/Math/: Adapters.h  Box.h  Color.h  Common.h  Half.h  Math.h  Matrix.h  Projection.h  Quaternion.h  Rect.h  Simd.h  Sphere.h  Transform.h  Vector.h  View.h
Engine/Source/Common/Src/Math/: Color.cpp
Engine/Source/Common/Test/: ContainerTest.cpp  MathTest.cpp
Program/: CMakeLists.txt
Program/MirrorSourceGenerator/: CMakeLists.txt
Sample/: CMakeLists.txt
Sample/Base/: Application.cpp  Camera.cpp  Camera.h
Sample/RHI-ParallelCompute/: ParallelCompute.cpp
Sample/RHI-SSAO/: SSAOApplication.cpp
Sample/RHI-TexSampling/: TexSampling.cpp
Sample/RHI-Triangle/: Triangle.cpp
Sample/Rendering-BaseTexture/: BaseTexture.cpp
TestProject/: CMakeLists.txt  Main.cpp
(+240 files in other folders)
